--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
         <title>Sound Board</title>
     </head>
     <body>
-        <h1>Project Starter</h1>
+        <audio id="bear" src="sounds/bear.mp3"></audio>
+        <audio id="elephant" src="sounds/elephant.mp3"></audio>
+        <audio id="leopard" src="sounds/leopard.mp3"></audio>
+        <audio id="lion" src="sounds/lion.mp3"></audio>
+        <audio id="monkeys" src="sounds/monkeys.mp3"></audio>
+        <audio id="whale" src="sounds/whale.mp3"></audio>
 
+        <div id="buttons"></div>
+        <footer>
+            All sounds from <a href="https://www.freesoundeffects.com/">www.freesoundeffects.com</a>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
